Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/074_expecting2_given1.xi
f():int,int
{
    return 1
}
//@PRACOWNIA
//@should_not_typecheck
